crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__end2.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/end2
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "hello\n" [Ended]
outcome: Ended
