crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__hello-world.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/hello-world
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Hello world\n" [Done]
outcome: Done
