crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__increment.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/increment
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "6\n" [Continue]
> "5\n" [Done]
outcome: Done
