crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__issue15.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/issue15
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "This is a test\n" [Continue]
> "SET_X:\n" [Continue]
> "X is not set!\n" [Ended]
outcome: Ended
