crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__lookup-safe-or-not.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/lookup-safe-or-not
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
outcome: Error
