crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__nested-pass-by-reference.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/nested-pass-by-reference
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "5\n" [Continue]
> "625\n" [Done]
outcome: Done
