crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__newlines_with_string_eval.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/newlines_with_string_eval
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "A\n" [Continue]
> "B\n" [Continue]
> "A\n" [Continue]
> "3\n" [Continue]
> "B\n" [Done]
outcome: Done
